force-app/main/default/objects/Opportunity/fields/Account_DataLoadID__c.field-meta.xml
<CustomField>
    <fullName>Account_DataLoadID__c</fullName>
    <formula>Account.Data_Load_ID__c</formula>
    <label>Account DataLoadID</label>
    <type>Text</type>
</CustomField>