force-app/main/default/objects/Opportunity/fields/Account_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Rep_Code__c</fullName>
    <formula>CASE(Account.RecordType.DeveloperName ,
&quot;Community_Prospect_Accounts&quot;,  Account.Prospect_Rep_Code__c  ,
&quot;Community_View_Account&quot;, Account.Prospect_Rep_Code__c ,
&quot;&quot;,TEXT(Account.Rep_Code__c ),
NULL)</formula>
    <label>Account Rep Code</label>
    <type>Text</type>
</CustomField>