force-app/main/default/objects/Opportunity/fields/BigMachines__Line_Items__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Line_Items__c</fullName>
    <label>Line Items</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>