force-app/main/default/objects/Opportunity/fields/cdcpc__Sizing_Request__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Sizing_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CC - Header sizing request this opportunity was derived from. Does not need to be on page layout.</description>
    <label>Sizing Request</label>
    <referenceTo>cdcpc__SizingRequest__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>