force-app/main/default/objects/Opportunity/fields/Country_of_Origin_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the End User have any Country of Origin Restrictions?  Restricted country of origin may impact the lead time and/or pricing</inlineHelpText>
    <label>Country of Origin Restrictions</label>
    <type>Checkbox</type>
</CustomField>