force-app/main/default/objects/Opportunity/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <label>Customer Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>