force-app/main/default/objects/Opportunity/fields/Customer_Ref_Test__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ref_Test__c</fullName>
    <label>Reference Customer Inquiry Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>