force-app/main/default/objects/Opportunity/fields/Days_Opp_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Opp_Open__c</fullName>
    <formula>IF( IsWon , CloseDate  - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
    <label>Days Opportunity is Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>