force-app/main/default/objects/Opportunity/fields/End_Use__c.field-meta.xml
<CustomField>
    <fullName>End_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Use</label>
    <type>Checkbox</type>
</CustomField>