force-app/main/default/objects/Opportunity/fields/EPC_Firm_Involved__c.field-meta.xml
<CustomField>
    <fullName>EPC_Firm_Involved__c</fullName>
    <description>Add Information About Involved Engineering, Procurement, Construction (EPC) Firms</description>
    <label>EPC Firm Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>