force-app/main/default/objects/Opportunity/fields/Integration_Message_Counter__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message_Counter__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Counter on the Opportunity to track number of messages sent to outside system for primary quote/order</description>
    <label>Integration Message Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>