force-app/main/default/objects/Opportunity/fields/Known_Competition2__c.field-meta.xml
<CustomField>
    <fullName>Known_Competition2__c</fullName>
    <inlineHelpText>If selecting Other, please fill out the Known Comp Additional Info field with the name of the competition</inlineHelpText>
    <label>Known Competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BS&amp;B</fullName>
            </value>
            <value>
                <fullName>Fike</fullName>
            </value>
            <value>
                <fullName>OsecoElfab</fullName>
            </value>
            <value>
                <fullName>Zook</fullName>
            </value>
            <value>
                <fullName>Rembe</fullName>
            </value>
            <value>
                <fullName>Protego</fullName>
            </value>
            <value>
                <fullName>L &amp; J Tech (Shand &amp; Jurs)</fullName>
            </value>
            <value>
                <fullName>Varec Biogas</fullName>
            </value>
            <value>
                <fullName>Emmerson</fullName>
            </value>
            <value>
                <fullName>Protectoseal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>