force-app/main/default/objects/Opportunity/fields/Known_Competition__c.field-meta.xml
<CustomField>
    <fullName>Known_Competition__c</fullName>
    <label>Known Competition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>