force-app/main/default/objects/Opportunity/fields/Last_Stage_Change_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify the user who was the last to change the Stage of the Opportunity</description>
    <label>Last Stage Change User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>