force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Closed / Opened as New / Revised Quote</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
                <label>Lost on Price</label>
            </value>
            <value>
                <fullName>Lost on Delivery Time</fullName>
            </value>
            <value>
                <fullName>Lost on Time to Quote</fullName>
            </value>
            <value>
                <fullName>Lost on Relationship</fullName>
            </value>
            <value>
                <fullName>Unable to Meet Specification</fullName>
            </value>
            <value>
                <fullName>Unable to Offer a Product / Solution</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Loss via Auto-Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>