force-app/main/default/objects/Opportunity/fields/OEM_Production_Run_Information__c.field-meta.xml
<CustomField>
    <fullName>OEM_Production_Run_Information__c</fullName>
    <label>OEM Production Run Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Run Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Production Run Opportunity Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>