force-app/main/default/objects/Opportunity/fields/of_Non_Change_Order_Quotes__c.field-meta.xml
<CustomField>
    <fullName>of_Non_Change_Order_Quotes__c</fullName>
    <label># of Non Change Order Quotes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>