force-app/main/default/objects/Opportunity/fields/Opportunity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Detail__c</fullName>
    <label>Opportunity Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM - New Requirment</fullName>
                <label>OEM - New Requirement</label>
            </value>
            <value>
                <fullName>OEM - Repeat Requirment</fullName>
                <label>OEM - Repeat Requirement</label>
            </value>
            <value>
                <fullName>Competitor Changeout</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
            <value>
                <fullName>New Requirement/Addition - Existing Asset</fullName>
            </value>
            <value>
                <fullName>Upgrade - Existing Asset</fullName>
            </value>
            <value>
                <fullName>Expansion - Existing Asset</fullName>
            </value>
            <value>
                <fullName>New Development/New Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>