force-app/main/default/objects/Opportunity/fields/Partner_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Code__c</fullName>
    <formula>TEXT(PartnerAccount.Rep_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Rep Code</label>
    <type>Text</type>
</CustomField>