force-app/main/default/objects/Opportunity/fields/Pre_Project_Assessment_Form__c.field-meta.xml
<CustomField>
    <fullName>Pre_Project_Assessment_Form__c</fullName>
    <formula>CASE(Product_Group__c , 
&apos;Continental Disc Products&apos;, HYPERLINK(&quot;http://form.jotformpro.com/form/51616089387970&quot;,&quot;Click to view CDC form&quot;), 
&apos;Groth BioGas Products&apos;, HYPERLINK(&quot;https://form.jotform.com/50776564472969&quot;,&quot;Click to view Groth form&quot;), 
&apos;Groth Valve Products&apos;, HYPERLINK(&quot;https://form.jotform.com/50776564472969&quot;,&quot;Click to view Groth form&quot;), 
&apos;No forms available&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Project Assessment Form</label>
    <type>Text</type>
</CustomField>