force-app/main/default/objects/Opportunity/fields/Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Product_Families__c</fullName>
    <label>Product Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HPX</fullName>
            </value>
            <value>
                <fullName>Reverse Acting Discs</fullName>
            </value>
            <value>
                <fullName>Tension Acting Discs</fullName>
            </value>
            <value>
                <fullName>Burst Indicators</fullName>
            </value>
            <value>
                <fullName>Sanitary Products</fullName>
            </value>
            <value>
                <fullName>Graphite Disc</fullName>
            </value>
            <value>
                <fullName>Vent Panels</fullName>
            </value>
            <value>
                <fullName>Relief Valve</fullName>
            </value>
            <value>
                <fullName>Flame Arrestors</fullName>
            </value>
            <value>
                <fullName>BGRs</fullName>
            </value>
            <value>
                <fullName>Biogas Products</fullName>
            </value>
            <value>
                <fullName>Spares/Kits</fullName>
            </value>
            <value>
                <fullName>Special Assemblies</fullName>
            </value>
            <value>
                <fullName>Varies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>