force-app/main/default/objects/Opportunity/fields/Product_Group_s__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_s__c</fullName>
    <label>Product Group(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>LaMOT</fullName>
            </value>
            <value>
                <fullName>Groth</fullName>
            </value>
            <value>
                <fullName>Tank Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>