force-app/main/default/objects/Opportunity/fields/Product_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Product_Lead_Time__c</fullName>
    <label>Product Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Lead_Time</valueSetName>
    </valueSet>
</CustomField>