force-app/main/default/objects/Opportunity/fields/Project_Classification__c.field-meta.xml
<CustomField>
    <fullName>Project_Classification__c</fullName>
    <label>Project Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXP</fullName>
                <label>New Construction - Expansion of existing Facility</label>
            </value>
            <value>
                <fullName>GRN</fullName>
                <label>New Construction - New Facility</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Not a Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>