force-app/main/default/objects/Opportunity/fields/Prototype_Sales_Sample__c.field-meta.xml
<CustomField>
    <fullName>Prototype_Sales_Sample__c</fullName>
    <inlineHelpText>Prototype = Is this an initial product design that is being used for customer evaluation? 
Sales Sample = Is this item being used to promote further sales of this item?</inlineHelpText>
    <label>Prototype / Sales Sample</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prototype</fullName>
            </value>
            <value>
                <fullName>Sales Sample</fullName>
            </value>
            <value>
                <fullName>Production Run</fullName>
                <isActive>false</isActive>
                <label>Production Run</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>