force-app/main/default/objects/Opportunity/fields/Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for filtering Opportunities. Outside Sales requested it (Ben S)</description>
    <label>Quote Sent</label>
    <type>Checkbox</type>
</CustomField>