force-app/main/default/objects/Opportunity/fields/Quote_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Amount__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>