force-app/main/default/objects/Opportunity/fields/Rep_Code_District__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code_District__c</fullName>
    <formula>Text(PartnerAccount.District__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District*</label>
    <type>Text</type>
</CustomField>