force-app/main/default/objects/Opportunity/fields/Rep_Code_Region__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code_Region__c</fullName>
    <formula>Text(PartnerAccount.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region*</label>
    <type>Text</type>
</CustomField>