force-app/main/default/objects/Opportunity/fields/Salesperson1__c.field-meta.xml
<CustomField>
    <fullName>Salesperson1__c</fullName>
    <label>Salesperson_Del</label>
    <length>80</length>
    <type>Text</type>
</CustomField>