force-app/main/default/objects/Opportunity/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Ship_To_Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ship_To_Address__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Ship_To_Address</relationshipName>
    <type>Lookup</type>
</CustomField>