force-app/main/default/objects/Opportunity/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <inlineHelpText>If applicable, select a sub-market that further defines this Opp. Note, not all markets have sub-markets available.</inlineHelpText>
    <label>Submarket</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Submarket</valueSetName>
    </valueSet>
</CustomField>